# Book

./: README.md  config.py  main.py  pyproject.toml
src/insights/book/: retriever.py  scraper.py  vector_db.py
